# EHR

./: EHR.ipynb  README.md  ehr.py  pytest.ini  setup.cfg
EHR/IPython Notebook/: EHR.ipynb
IPython Notebook/: EHR.ipynb  READM.Emd  README.md
IPython Notebook/Plots/: README.md
Report/: README.md
Scripts/: README.md
Scripts/EHR_Analysis/: LISCENSE  ehr.py  setup.cfg
Scripts/EHR_Analysis/tests/: data_test.py  pytest.ini
data/: READM.md  README.md  conditions.parquet  medications.parquet  patients.parquet
