[metadata]
name = EHR_Analysis
author = Ryan Marinelli
author_email = ryanmarinelli24@gmail.com
description = Analysis of synethic synthetic data
url = https://github.com/rymarinelli/EHR
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False
